--- a/pkg/apis/core/validation/BUILD
+++ b/pkg/apis/core/validation/BUILD
@@ -26,6 +26,7 @@ go_library(
         "//pkg/features:go_default_library",
         "//pkg/fieldpath:go_default_library",
         "//pkg/security/apparmor:go_default_library",
+        "//pkg/util/tolerations/merge:go_default_library",
         "//staging/src/k8s.io/api/core/v1:go_default_library",
         "//staging/src/k8s.io/api/events/v1beta1:go_default_library",
         "//staging/src/k8s.io/apimachinery/pkg/api/equality:go_default_library",
